--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,127 @@
+body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden
+}
+
+body.swal2-height-auto {
+    height: 100% !important;
+  }
+
+  .swal2-title {
+      padding: 0em;
+  }
+
+  .swal2-styled.swal2-confirm {
+      color: black !important;
+  }
+
+  @media screen and (max-height: 650px) {
+    body {
+      height: 50%;
+      width: 50%';'
+    }
+}
+
+.logo-brand {
+    margin-left: 30px;
+    margin-top: 20px;
+    background: linear-gradient(to right, red, crimson, pink, purple, springgreen, blue);
+    background-size: 200% 200%;
+    animation: rainbow 2s ease-in-out infinite;
+    background-clip: text;
+    -webkit-background-clip: text;
+    transition: color .2s ease-in-out;
+    text-transform: lowercase;
+    font-weight: 900;
+    color: white;
+}
+
+.logo-brand h1:hover {
+    color: rgba(0, 0, 0, 0);
+}
+
+.logo-brand a {
+    text-decoration: none;
+    color: white
+}
+
+.country-question h1 {
+    color: white;
+}
+
+.country-image {
+    padding: 50px;
+    border: 2px white solid;
+    background-color: rgb(54, 54, 54);
+}
+
+.country-image img {
+    margin: 5px;
+}
+
+.btn {
+    box-shadow: none !important;
+}
+
+.hint-options {
+    color: white
+}
+
+.hint-button p {
+    cursor: pointer;
+    font-size: 17px;
+}
+
+.hint-counter p {
+    text-decoration: underline;
+}
+
+#btn-guess {
+    margin-left: 10px;
+    color: white;
+    outline: white solid 1px;
+}
+
+#btn-guess:hover {
+    background-color: white;
+    color: black;
+}
+
+.hints-section {
+    color: rgb(255, 255, 108);
+    font-style: italic;
+    font-weight: 600;
+}
+    
+
+@keyframes rainbow {
+    0% {
+        background-position: left
+    }
+
+    50% {
+        background-position: right
+    }
+
+    100% {
+        background-position: left
+    }
+}
+
 .main-content {
     position: absolute;
+    width: 100%;
+    max-width: 600px;
     top: 50%;
     left: 50%;
+    padding-left: 15px;
+    padding-right: 15px;
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
+}
+
+.country-image {
+    display: none;
 }
